--- a/app/src/main/res/layout/offer_card.xml
+++ b/app/src/main/res/layout/offer_card.xml
@@ -16,6 +16,18 @@
         android:scaleType="centerCrop"
         />
 
+    <TextView
+        android:id="@+id/unavailable_title"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_gravity="center|top"
+        android:gravity="center"
+        android:paddingRight="25dp"
+        android:textSize="16sp"
+        android:textColor="@color/grey"
+        android:paddingLeft="25dp"
+        tools:text="You’ve reached the maximum number of this gift card for this month"
+         />
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
@@ -41,7 +53,7 @@
             android:layout_marginEnd="8dp"
             android:fontFamily="sans-serif-medium"
             android:letterSpacing="-0.02"
-            android:textColor="#0487fa"
+            android:textColor="@color/blue"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +94,10 @@
             app:layout_constraintTop_toBottomOf="@+id/offer_title"
             tools:text="author name"/>
 
+
+
     </android.support.constraint.ConstraintLayout>
+
 
 </android.support.v7.widget.CardView>
 
