--- a/app/src/main/res/layout/earn_categories_tab.xml
+++ b/app/src/main/res/layout/earn_categories_tab.xml
@@ -111,12 +111,23 @@
             android:layout_marginStart="17dp"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="17dp"
-            android:visibility="@{model.showData}"
+            android:visibility="@{!model.isLoading}"
             android:background="@color/grey_dark_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/subtitle" />
+
+        <ProgressBar
+            android:layout_width="30dp"
+            android:layout_height="300dp"
+            android:theme="@style/AppTheme.Blue"
+            android:visibility="@{model.isLoading}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/balance" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/categories"
