--- a/app/src/main/res/layout/earn_categories_tab.xml
+++ b/app/src/main/res/layout/earn_categories_tab.xml
@@ -111,7 +111,7 @@
             android:layout_marginStart="17dp"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="17dp"
-            android:visibility="@{!model.isLoading}"
+            android:visibility="@{model.showData}"
             android:background="@color/grey_dark_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
