poc_transfer_intent

--- a/app/src/main/res/layout/multiple_answers_button.xml
+++ b/app/src/main/res/layout/multiple_answers_button.xml
@@ -32,7 +32,7 @@
             />
 
         <TextView
-            android:id="@+id/answer_text"
+            android:id="@+id/info_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
