--- a/app/src/main/res/layout/image_text_answer_layout.xml
+++ b/app/src/main/res/layout/image_text_answer_layout.xml
@@ -26,14 +26,14 @@
             android:layout_height="0dp"
             android:layout_gravity="top|center"
             android:scaleType="fitCenter"
-            app:layout_constraintBottom_toTopOf="@+id/answer_text"
+            app:layout_constraintBottom_toTopOf="@+id/info_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/android_pattern" />
 
         <TextView
-            android:id="@+id/answer_text"
+            android:id="@+id/info_text"
             android:layout_width="match_parent"
             android:layout_height="39dp"
             android:layout_gravity="bottom|center"
