--- a/app/src/main/res/layout/spend_tab.xml
+++ b/app/src/main/res/layout/spend_tab.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.spend.SpendViewModel"/>
+            type="org.kinecosystem.kinit.viewmodel.spend.SpendTabViewModel" />
     </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <View
             android:id="@+id/balance"
@@ -19,8 +20,7 @@
             android:layout_height="@dimen/balance_height"
             android:background="@color/status_bar_color"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/spend_balance_text"
@@ -36,7 +36,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/balance"
             app:layout_constraintTop_toTopOf="@id/balance"
-            tools:text="200"/>
+            tools:text="200" />
 
         <TextView
             android:id="@+id/spend_kin_currency"
@@ -52,7 +52,8 @@
             app:layout_constraintBottom_toBottomOf="@id/balance"
             app:layout_constraintStart_toEndOf="@id/spend_balance_text"
             app:layout_constraintTop_toTopOf="@id/balance"
-            tools:text="KIN"/>
+            tools:text="KIN" />
+
         <ImageView
             android:id="@+id/kin_icon"
             android:layout_width="wrap_content"
@@ -62,54 +63,152 @@
             app:layout_constraintBottom_toBottomOf="@+id/spend_kin_currency"
             app:layout_constraintStart_toEndOf="@+id/spend_kin_currency"
             app:layout_constraintTop_toTopOf="@+id/spend_kin_currency"
-            app:srcCompat="@drawable/k_letter"/>
+            app:srcCompat="@drawable/k_letter" />
 
-        <ProgressBar
-            android:layout_width="30dp"
-            android:layout_height="300dp"
-            android:theme="@style/AppTheme.Blue"
-            android:visibility="@{model.isLoading}"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <View
+            android:id="@+id/line_delim"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="50dp"
+            android:background="#d2d7e1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/balance" />
+            app:layout_constraintTop_toBottomOf="@+id/balance" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/offers_list"
+        <View
+            android:id="@+id/shadow"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:background="@drawable/balance_gradient_shadow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line_delim" />
+
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/spendNavTabs"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scrollbars="vertical"
-            android:visibility="@{model.showData}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/shadow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/balance"/>
+            app:layout_constraintTop_toBottomOf="@+id/balance"
+            app:tabIndicatorColor="@color/tab_font_color_selected"
+            app:tabSelectedTextColor="@color/fab_font_color"
+            app:tabTextColor="@color/fab_font_color">
 
-        <include
-            android:id="@+id/general_error"
-            layout="@layout/error_general_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="@{model.hasErrors}"
+            <android.support.design.widget.TabItem
+                android:id="@+id/spend_tab_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="16sp" />
+
+            <android.support.design.widget.TabItem
+                android:id="@+id/transfer_tab_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="16sp" />
+        </android.support.design.widget.TabLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:paddingTop="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/balance" />
+            app:layout_constraintTop_toBottomOf="@+id/line_delim">
 
-        <include
-            android:id="@+id/no_internet_error"
-            layout="@layout/error_no_internet_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="@{!model.hasNetwork}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/balance" />
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/spend_page_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="#22aabb"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/balance">
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/offersList"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:scrollbars="vertical"
+                    android:background="#ff88aa"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+
+                   <ProgressBar
+                android:layout_width="30dp"
+                android:layout_height="300dp"
+                android:theme="@style/AppTheme.Blue"
+                android:visibility="@{model.isLoading}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent" />
+
+          <!--  <android.support.v7.widget.RecyclerView
+                android:id="@+id/offers_list"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:scrollbars="vertical"
+                android:visibility="@{model.showData}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />-->
+
+            <include
+                android:id="@+id/general_error"
+                layout="@layout/error_general_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="@{model.hasErrors}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <include
+                android:id="@+id/no_internet_error"
+                layout="@layout/error_no_internet_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="@{!model.hasNetwork}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/transfer_page_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/red_wrong"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/balance">
+
+
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v4.view.ViewPager>
 
 
     </android.support.constraint.ConstraintLayout>
