--- a/app/src/main/res/layout/tutorial_activity.xml
+++ b/app/src/main/res/layout/tutorial_activity.xml
@@ -27,7 +27,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
-        android:background="@drawable/tutorial_page_background"
+        android:background="@drawable/page_circle"
         app:layout_constraintBottom_toTopOf="@+id/start_app"
         app:layout_constraintEnd_toStartOf="@+id/page2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,7 +39,7 @@
         android:layout_width="5dp"
         android:layout_height="5dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/tutorial_page_background"
+        android:background="@drawable/page_circle"
         app:layout_constraintBottom_toTopOf="@+id/start_app"
         app:layout_constraintEnd_toStartOf="@+id/page1"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,7 +51,7 @@
         android:layout_width="5dp"
         android:layout_height="5dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/tutorial_page_background"
+        android:background="@drawable/page_circle"
         app:layout_constraintBottom_toTopOf="@+id/start_app"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
