tabs_pager_adapter

--- a/app/src/main/res/layout/app_card.xml
+++ b/app/src/main/res/layout/app_card.xml
@@ -93,9 +93,8 @@
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:lines="1"
-        android:textColor="#7884a5"
+        android:textColor="@color/grey"
         android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btn"
         app:layout_constraintStart_toEndOf="@+id/app_icon"
         app:layout_constraintTop_toBottomOf="@+id/app_image"
@@ -113,7 +112,7 @@
         android:fontFamily="sans-serif"
         android:gravity="top|left"
         android:lines="2"
-        android:textColor="#7884a5"
+        android:textColor="@color/grey"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
