--- a/app/src/main/res/layout/apps_category_layout.xml
+++ b/app/src/main/res/layout/apps_category_layout.xml
@@ -16,7 +16,7 @@
         android:paddingLeft="15dp"
         android:paddingTop="21dp"
         android:paddingRight="15dp"
-        android:textColor="#7884a5"
+        android:textColor="@color/grey"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
-        android:background="#d2d7e1"
+        android:background="@color/answer_stroke"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
