--- a/app/src/main/res/layout/apps_category_layout.xml
+++ b/app/src/main/res/layout/apps_category_layout.xml
@@ -44,6 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:background="@color/answer_stroke"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
