--- a/app/src/main/res/layout/balance_tab.xml
+++ b/app/src/main/res/layout/balance_tab.xml
@@ -106,6 +106,7 @@
             app:layout_constraintBottom_toTopOf="@+id/shadow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:tabTextAppearance="@style/CustomTextAppearanceTab"
             app:layout_constraintTop_toBottomOf="@+id/balance_blue"
             app:tabIndicatorColor="@color/tab_font_color_selected"
             app:tabSelectedTextColor="@color/fab_font_color"
