--- a/app/src/main/res/layout/spend_tab.xml
+++ b/app/src/main/res/layout/spend_tab.xml
@@ -90,6 +90,7 @@
             android:id="@+id/spendNavTabs"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:tabTextAppearance="@style/CustomTextAppearanceTab"
             app:layout_constraintBottom_toTopOf="@+id/shadow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
