--- a/app/src/main/res/layout/ecoapps_transfers_layout.xml
+++ b/app/src/main/res/layout/ecoapps_transfers_layout.xml
@@ -75,28 +75,28 @@
                     app:ecoAppsCategories="@{model.appCategories}" />
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/learn_more"
+                    android:id="@+id/coming_soon"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="22dp"
                     android:layout_marginTop="45dp"
                     android:layout_marginRight="22dp"
                     android:layout_marginBottom="10dp"
-                    android:visibility="gone"
+                    android:onClick="@{model::onComingSoonClicked}"
                     app:cardCornerRadius="8dp">
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:scaleType="center"
-                        android:src="@drawable/learn_more_card" />
+                        android:layout_height="128dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/learn_more_illustration_minsize_card" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="14dp"
                         android:paddingTop="13dp"
-                        android:text="@string/learn_more_about_send_kin"
+                        android:text="@string/send_kin_coming_soon"
                         android:textColor="@color/grey"
                         android:textSize="16sp" />
 
