--- a/app/src/main/res/layout/backup_confirm.xml
+++ b/app/src/main/res/layout/backup_confirm.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -43,11 +42,11 @@
             android:id="@+id/subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="17dp"
             android:layout_marginStart="17dp"
             android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif"
+            android:layout_marginEnd="17dp"
             android:clickable="true"
+            android:fontFamily="sans-serif"
             android:text="@string/check_email"
             android:textColor="@color/grey"
             android:textSize="@dimen/small_text_size"
@@ -60,8 +59,8 @@
             android:id="@+id/restriction"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="50dp"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center_horizontal"
             android:lineSpacingExtra="6sp"
@@ -82,7 +81,7 @@
             android:clickable="@{model.isClickable()}"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:text="@string/confirm"
+            android:text="@string/check_your_email"
             android:textColor="@drawable/auth_next_font_color"
             android:textSize="@dimen/next_text_size"
             android:textStyle="normal"
@@ -117,10 +116,10 @@
             android:id="@+id/progress_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="123dp"
             android:layout_marginStart="56dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="123dp"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/backBtn"
             app:layout_constraintEnd_toEndOf="parent"
