--- a/app/src/main/res/layout/ecoapps_transfers_layout.xml
+++ b/app/src/main/res/layout/ecoapps_transfers_layout.xml
@@ -82,12 +82,12 @@
                     android:layout_marginTop="45dp"
                     android:layout_marginRight="22dp"
                     android:layout_marginBottom="10dp"
-                    android:onClick="@{model::onComingSoonClicked}"
+                    android:onClick="@{model::onLearnMoreClicked}"
                     app:cardCornerRadius="8dp">
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="128dp"
+                        android:layout_height="100dp"
                         android:scaleType="fitCenter"
                         android:src="@drawable/learn_more_illustration_minsize_card" />
 
@@ -96,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="14dp"
                         android:paddingTop="13dp"
-                        android:text="@string/send_kin_coming_soon"
+                        android:text="@string/send_kin_learn_more"
                         android:textColor="@color/grey"
                         android:textSize="16sp" />
 
