--- a/app/src/main/res/layout/coming_soon_web_layout.xml
+++ b/app/src/main/res/layout/coming_soon_web_layout.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.EcoAppsComingSoonViewModel"/>
+            type="org.kinecosystem.kinit.viewmodel.WebInfoViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
