--- a/app/src/main/res/layout/ecoapps_transfers_layout.xml
+++ b/app/src/main/res/layout/ecoapps_transfers_layout.xml
@@ -95,7 +95,7 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="14dp"
                         android:paddingTop="13dp"
-                        android:text="@string/send_kin_learn_more"
+                        android:text="@{model.ableToSend? @string/send_kin_learn_more : @string/send_kin_coming_soon}"
                         android:textColor="@color/grey"
                         android:textSize="16sp" />
 
